# csocket

./: .gitignore  Makefile.am  README.md  configure.ac
include/csocket/: csocket.h  socket.h  ssl_socket.h
src/: Makefile.am  init.c  socket.c  socket_internal.h  ssl_socket.c
src/test/: Makefile.am  socket_test.c
